# Machina

./: .gitignore  .gitmodules  TODO.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/dev/maples/vm/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/aidl/dev/maples/vm/: IShellProxyService.aidl
app/src/main/cpp/: CMakeLists.txt  Makefile  go.work  machina-jni.cpp
app/src/main/java/dev/maples/vm/: MachinaApplication.kt
app/src/main/java/dev/maples/vm/activities/: MainActivity.kt
app/src/main/res/drawable/: receipt_long.xml  send.xml  terminal.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/dev/maples/vm/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
hidden-api-stub/: build.gradle.kts
hidden-api-stub/src/main/aidl/android/system/virtualizationcommon/: DeathReason.aidl  ErrorCode.aidl
hidden-api-stub/src/main/aidl/android/system/virtualizationservice/: CpuTopology.aidl  IVirtualMachine.aidl  IVirtualMachineCallback.aidl  IVirtualizationService.aidl  MemoryTrimLevel.aidl  VirtualMachineAppConfig.aidl  VirtualMachineDebugInfo.aidl  VirtualMachinePayloadConfig.aidl  VirtualMachineRawConfig.aidl
hidden-api-stub/src/main/java/android/content/: ContextHidden.java
hidden-api-stub/src/main/java/android/os/: ServiceManager.java
rootfs/: Makefile
rootfs/docker/: Dockerfile  make-rootfs.sh
rootfs/machina-tools/: postinit  preinit
rootfs/scripts/: postinit
rootfs/src/: gvforwarder-proxy.c  vsock-shell.c
(+69 files in other folders)
